tests/valid/56332_simple_sum/simple_sum.agu
-- Author: 56332, Student Ricardo Sobral
let sum (a, b) : (Int, Int) -> Int = a + b
let _ : Unit = print(sum(10, 5))